Force to use HTTP protocol to work locally (using file://).

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<span id="preload-04"></span>
 			<span id="preload-05"></span>
     </section>
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
